--- a/src/app/places/offers/edit-offer/edit-offer.page.html
+++ b/src/app/places/offers/edit-offer/edit-offer.page.html
@@ -2,12 +2,27 @@
   <ion-toolbar>
     <ion-title>Editing: {{place.title}}</ion-title>
     <ion-buttons slot="start">
-      <ion-back-button [routerLink]="['/', 'places', 'tabs', 'offers', place.id]"
-      defaultHref="/places/tabs/offers/"></ion-back-button>
+      <ion-back-button 
+      [defaultHref]="'/places/tabs/offers/' + place.id"></ion-back-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+  <ion-grid>
+    <ion-row>
+      <ion-col size="12" size-md="8" offset-sm="2" class="ion-text-center">
+        <ion-card>
+          <ion-card-header>
+            <ion-card-title>{{ place.title }}</ion-card-title>
+            <ion-card-subtitle>{{ place.price }}</ion-card-subtitle>
+          </ion-card-header>
+          <ion-img [src]="place.imageUrl"></ion-img>
+          <ion-card-content>
+            <p>{{ place.description }}</p>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
