--- a/src/app/places/offers/offer-bookings/offer-bookings.page.html
+++ b/src/app/places/offers/offer-bookings/offer-bookings.page.html
@@ -8,5 +8,10 @@
 </ion-header>
 
 <ion-content>
-  <ion-button class="ion-margin" color="primary" [routerLink]="['/', 'places', 'tabs', 'offers', 'edit', place.id]">Edit</ion-button>
+  <ion-button 
+  class="ion-margin" 
+  color="primary" [routerLink]="['/', 'places', 'tabs', 'offers', 'edit', place.id]"
+  >
+  Edit
+</ion-button>
 </ion-content>
