--- a/src/app/auth/auth.page.html
+++ b/src/app/auth/auth.page.html
@@ -5,6 +5,12 @@
 </ion-header>
 
 <ion-content>
+  <ion-item>
+    <ion-list>
+      <ion-label position="floating">E-mail</ion-label>
+      <ion-input></ion-input>
+    </ion-list>
+  </ion-item>
   <ion-button color="primary" (click)="onLogin()">
     Login
   </ion-button>
