--- a/src/app/places/offers/new-offer/new-offer.page.html
+++ b/src/app/places/offers/new-offer/new-offer.page.html
@@ -8,5 +8,28 @@
 </ion-header>
 
 <ion-content>
-
+  <ion-grid fixed>
+    <ion-row class="ion-align-items-center ion-justify-content-center">
+      <ion-col size="5" size-sm="4" size-md="2" offset-sm="2" offset-md="4">Row 1 Col 1</ion-col>
+      <ion-col size="1" size-sm="4" size-md="2">
+        <ion-card>
+          <ion-card-content>
+            <h1>HOla que pasa</h1>
+            <p>Row 1 Col 2</p>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>Row 1 Col 1</ion-col>
+      <ion-col>
+        <ion-card>
+          <ion-card-content>
+            <h1>HOla que pasa</h1>
+            <p>Row 1 Col 2</p>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
