--- a/src/app/places/discover/discover.page.html
+++ b/src/app/places/discover/discover.page.html
@@ -12,6 +12,10 @@
 
 <ion-content>
   <!--  -->
+  <ion-segment value="all" (ionChange)="onFilterUpdate($event)">
+    <ion-segment-button value="all">All Places</ion-segment-button>
+    <ion-segment-button value="bookable">Bookable Places</ion-segment-button>
+  </ion-segment>
   <ion-grid>
     <ion-row>
       <ion-col size="12" size-md="8" offset-sm="2" class="ion-text-center">
